update imagen/lista/servicio con la raspberry/ metodo on y off para los leds /btn refrescar sin uso

--- a/src/app.css
+++ b/src/app.css
@@ -21,5 +21,32 @@ The following CSS rule changes the font size of all Buttons that have the
 "-primary" class modifier.
 */
 Button.-primary {
-    font-size: 18;
+    font-size: 14;
 }
+.far {
+    font-family: "Font Awesome 5 Free", "fa-regular-400";
+    font-weight: 400;
+}
+
+.fab {
+    font-family: "Font Awesome 5 Brands", "fa-brands-400";
+    font-weight: 400;
+}
+
+.fas {
+    font-family: "Font Awesome 5 Free", "fa-solid-900";
+    font-weight: 900;
+}
+
+.btn-primary {
+    height: 50;
+    background-color: #2d3a54;
+    border-radius: 5;
+    font-size: 20;
+    font-weight: 600;
+    color: whitesmoke;
+  }
+  .btn-primary:disabled {
+    opacity: 0.5;
+  }
+
