--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,12 @@
-<!--<Button text="Ingresar" (tap)="ingresar()" class="btn btn-primary"></Button>-->
-
-<ActionBar title="Inicia session" android.icon="res://icon" android.iconVisibility="always">
-</ActionBar>
 
 <GridLayout backgroundColor="#CCCCCC">
     <ScrollView>
-        <StackLayout margin="10" verticalAlignment="center">
-            <StackLayout class="form" padding="15" backgroundColor="#FFFFFF">
+        <StackLayout margin="25" verticalAlignment="center">
+
+            <StackLayout class="form" padding="25" backgroundColor="#FFFFFF">
+                <Label class="header" text="PetDose"></Label>
+                <Image src="res://icon" loadMode="async" stretch="aspectFit" ></Image>
+
                 <GridLayout rows="auto,auto">
                     <StackLayout row="0" class="input-field">
                         <TextField class="input" hint="Email" keyboardType="email"
@@ -15,12 +15,14 @@
                         </TextField>
                     </StackLayout>
                     <StackLayout row="1" class="input-field">
-                        <TextField secure="true" class="input" hint="Password" 
+                        <TextField secure="true" class="input" hint="Password"
                         autocorrect="false" autocapitalizationType="none" [(ngModel)]="user.password" >
                         </TextField>
                     </StackLayout>
+                    <ActivityIndicator rowspan="2" [busy]="isBusy" color="black" width="100" height="100"
+                       (busyChange)="onBusyChanged($event)"></ActivityIndicator>
                 </GridLayout>
-                <Button text="Ingresar" (tap)="ingresar()" class="btn btn-primary"></Button>
+                <Button [isEnabled]="!isBusy" text="Ingresar" (tap)="ingresar()" class="btn btn-primary"></Button>
             </StackLayout>
         </StackLayout>
     </ScrollView>
